--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vercel/speed-insights": "^1.0.12",
     "next": "14.2.5",
+    "next-intl": "^3.17.3",
     "react": "^18",
     "react-dom": "^18"
   },
